--- a/_posts/2014-10-20-palette-v21.markdown
+++ b/_posts/2014-10-20-palette-v21.markdown
@@ -6,12 +6,12 @@ date: '2014-10-20 16:04:27'
 
 Tried the Android Lollipop SDK? You may have noticed that Palette's API has been updated. As before, Palette allows you to extract colors from images for use in your UI.
 
-![](/content/images/style-color-colorstory-01_large_mdpi.png)
+![](/content/images/2014/11/style-color-colorstory-01_large_mdpi.png)
 
 ## Generating a palette
 The first step is to generate a Palette instance from a `Bitmap`. We have four related ways to do this:
 
-```
+{% highlight java %}
 // Synchronous methods.
 // --------------------------------
 // These should be used when you have access to the underlying image loading thread.
@@ -44,7 +44,7 @@ Palette.generateAsync(bitmap, 24, new Palette.PaletteAsyncListener() {
        // Here's your generated palette
     }
 });
-```
+{% endhighlight %}
 
 ## Using the palette
 
@@ -71,7 +71,7 @@ Each [Swatch](https://developer.android.com/reference/android/support/v7/graphic
  
 The different text colors roughly match up to the material design [standard styles](http://www.google.co.uk/design/spec/style/typography.html#typography-standard-styles) of the same name. The title text color will be more translucent as the text is larger and thus requires less color contrast. The body text color will be more opaque as text is smaller and thus requires more contrast from color.
 
-```
+{% highlight java %}
 Palette.Swatch swatch = palette.getVibrantSwatch();
 TextView titleView = ...;
 
@@ -79,7 +79,7 @@ if (swatch != null) {
     titleView.setBackgroundColor(swatch.getRgb());
     titleView.setTextColor(swatch.getTitleTextColor());
 }
-```
+{% endhighlight %}
 
 Please note that if Palette can not find a color which matches the criteria then it will return `null`. This is why there is a null check above.
 
@@ -87,9 +87,9 @@ Please note that if Palette can not find a color which matches the criteria then
 
 But what if you do not like Palette's color selections? In this case, you can grab all of the swatches which make up the Palette as so:
 
-```
+{% highlight java %}
 List<Palette.Swatch> swatches = palette.getSwatches();
-```
+{% endhighlight %}
 
 You can then iterate over them and choose whichever color you want.
 
